[package]
name = "paycheck-utils"
version = "0.2.2"
authors = ["Samuel Diaz"]
edition = "2024"
description = "A CLI tool for estimating paycheck withholdings and net income. Can also be used as a library."
license = "MIT"

[[bin]]
name = "check-paycheck"
path = "src/main.rs"

[features]
default = []
lib = []

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.56", features = ["derive"] }
